# sitemap-monitor

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  README_ZH.md  docker-compose.yml
.specify/memory/: constitution.md
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/scripts/: dev.sh  start.sh
backend/src/sitemap_monitor/: __init__.py  config.py  logging.py  main.py
backend/src/sitemap_monitor/api/: auth.py  changes.py  dashboard.py  deps.py  exceptions.py  health.py  monitors.py  notifications.py  users.py
backend/src/sitemap_monitor/cli/: __init__.py
backend/src/sitemap_monitor/core/: __init__.py  auth.py  change_service.py  checker.py  differ.py  monitor_service.py  notification_service.py  notifier.py  snapshot_service.py  validator.py
backend/src/sitemap_monitor/core/notifiers/: __init__.py  email.py  webhook.py
backend/src/sitemap_monitor/models/: __init__.py  monitor.py  notification.py  snapshot.py  user.py
backend/src/sitemap_monitor/parsers/: __init__.py  sitemap.py
backend/src/sitemap_monitor/tasks/: __init__.py  cleanup.py  scheduler.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/Changes/: ChangeDetailModal.tsx  ChangesList.tsx  index.ts
frontend/src/components/Forms/: AddMonitorForm.tsx  index.ts
frontend/src/i18n/: config.ts
frontend/src/services/: api.ts  changes.ts  dashboard.ts  monitors.ts  notifications.ts
frontend/src/stores/: authStore.ts  onboardingStore.ts
frontend/src/utils/: queryClient.ts
specs/001-sitemap-monitor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-sitemap-monitor/checklists/: requirements.md
specs/001-sitemap-monitor/contracts/: api.yaml
(+33 files in other folders)
